<resources>
    <string name="app_name">The Notes</string>
    <string name="profile_name">Rajesh Bhadra</string>
    <string name="profile_email">rajeshbhadra62@gmail.com</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_trash">Trash</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_more">More Apps</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_lock">Lock</string>
    <string name="tag_one">Today</string>
    <string name="owner">By Think nXt Media</string>
    <string name="profile_edit_option">profile edit option</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_notes">Home Notes</string>
    <string name="title">Note Title</string>
    <string name="notes">Notes</string>
    <string name="back_button">back Button</string>
    <string name="text_style">Text Style</string>
    <string name="set_image">Set Image</string>
    <string name="tag_button">Tag button</string>
    <string name="content_align">Content align</string>
    <string name="font_family">Font Family</string>
    <string name="note_tag">All</string>
    <string name="add_tag">Add</string>
    <string name="demo_tag">Today</string>
    <string name="cross_button">cross Button</string>
    <string name="align_left_btn">align left btn</string>
    <string name="align_right_botton">align Right botton</string>
    <string name="alignCenter">center the text</string>
    <string name="bold_button">bold button</string>
    <string name="done_btn">Done btn</string>
    <string name="title_note_making_page">This is a Test Title.</string>
    <string name="date">March 10</string>
    <string name="delete_btn">delete Btn</string>
    <string name="write_note">Write Note</string>
    <string name="h1_name">h1 name</string>
    <string name="delete_button">delete Button</string>
    <string name="tag_text">Random 1</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin (Refresh after pin)</string>
    <string name="trash_title">This is title</string>
    <string name="recover">Recover</string>
    <string name="all_tag">All</string>
    <string name="home_tag">Home</string>
    <string name="work_tag">Work</string>
    <string name="personal_tag">Personal</string>
    <string name="tag_createing_btn">Tag creating btn</string>
    <string name="color_star_icon">color star icon</string>
    <string name="non_color">non color star icon</string>
    <string name="starred">Favourite</string>
    <string name="s_starredLayout">This is starred layout diff deaf fossa dff staff</string>
    <string name="color_star">Starred</string>
    <string name="starred_text">This is new title , fo android studio faff add dfa diseased adds distaff</string>
    <string name="sta_icon">sta icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="recover_icon">recover icon</string>
    <string name="favourite">Favourite</string>
    <string name="unFavourite">Un Favourite</string>
    <string name="note_title">This is note</string>
    <string name="powered_by">Powered by</string>
    <string name="company_name">Think nXt Media :</string>
    <string name="copyRight">©All Rights Reserved</string>
    <string name="nightMode">Night Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="color_picker">color picker</string>
    <string name="pin_note">Pin Note</string>
    <string name="un_pin">Unpin (Refresh after Unpin)</string>
    <string name="no_notes2">write your notes now</string>
    <string name="no_notes">One app for remember everything</string>


</resources>