<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ash"
    tools:context=".note_makng_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtnId"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_button" />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@null"
        android:gravity="center|start"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_20sdp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/colorPanelId"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/color_panel" />

        <ImageView
            android:id="@+id/fontStyleId"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:contentDescription="@string/text_style"

            android:src="@drawable/font_style" />

        <ImageView
            android:id="@+id/ImageSetBtnId"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:contentDescription="@string/set_image"

            android:src="@drawable/image_icon" />

        <ImageView
            android:id="@+id/TextFormatId"
            android:contentDescription="@string/content_align"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:src="@drawable/align_icon" />

        <ImageView
            android:id="@+id/noteTagId"
            android:contentDescription="@string/tag_button"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/tag_black"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>