<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/alignLeftId"
        android:src="@drawable/align_left"
        android:layout_margin="@dimen/_10sdp"
        android:contentDescription="@string/align_left_btn" />


    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/align_right"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/alignRightId"
        android:contentDescription="@string/align_right_botton" />

  <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/align_center"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/alignCenterId"
        android:contentDescription="@string/alignCenter" />


     <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/italic"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/ItalicTextId"
        android:contentDescription="@string/alignCenter" />


<ImageView
    android:layout_width="@dimen/_30sdp"
    android:layout_height="@dimen/_30sdp"
    android:src="@drawable/bold_text"
    android:layout_margin="@dimen/_10sdp"
    android:id="@+id/boldTextId"
    android:contentDescription="@string/bold_button" />



</LinearLayout>