<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <HorizontalScrollView
        android:id="@+id/noteEditorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/colorPanelId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/color_panel" />

            <ImageView
                android:id="@+id/fontStyleId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/text_style"
                android:src="@drawable/font_style" />


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/content_align"
                android:src="@drawable/align_icon" />

            <ImageView
                android:id="@+id/noteTagId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/tag_button"
                android:src="@drawable/tag_black" />

            <ImageView
                android:id="@+id/alignLeftId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/align_left_btn"
                android:src="@drawable/align_left" />


            <ImageView
                android:id="@+id/alignRightId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/align_right_botton"
                android:src="@drawable/align_right" />

            <ImageView
                android:id="@+id/alignCenterId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:contentDescription="@string/alignCenter"
                android:src="@drawable/align_center" />


            <ImageView
                android:id="@+id/ItalicTextId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/alignCenter"
                android:src="@drawable/italic" />


            <ImageView
                android:id="@+id/boldTextId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/bold_button"
                android:src="@drawable/bold_text" />


            <ImageView
                android:id="@+id/hId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/h1_name"
                android:scaleType="center"
                android:src="@drawable/h1" />

            <ImageView
                android:id="@+id/h2Id"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/h1_name"
                android:scaleType="center"
                android:src="@drawable/h2_icon_black" />

            <ImageView
                android:id="@+id/h3Id"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/h1_name"
                android:scaleType="center"
                android:src="@drawable/h3" />


        </LinearLayout>


    </HorizontalScrollView>
</RelativeLayout>