<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:elevation="@dimen/_10sdp"
app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="center"
            android:id="@+id/s_starred_title_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/starred_text"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/s_starred_star_id"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1"
                android:contentDescription="@string/sta_icon"
                android:src="@drawable/star_color_icon"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/starred_star_black_id"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1"
                android:visibility="gone"
                android:contentDescription="@string/sta_icon"
                android:src="@drawable/star_black_icon" />

            <TextView
                android:id="@+id/s_starred_date_id"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/starred_date_color" />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>