<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_Note">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/noteEditingId"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_20sdp"
            android:backgroundTint="@color/light_orange"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/_100sdp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@color/white" />

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/white" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>



        <RelativeLayout
            android:id="@+id/topBarId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backBtnId"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_button" />

            <ImageButton
                android:id="@+id/noteSaveBtnId"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"

                android:background="@android:color/transparent"
                android:contentDescription="@string/done_btn"
                android:padding="@dimen/_30sdp"
                android:src="@drawable/done_icon_32"
                android:visibility="gone" />
        </RelativeLayout>

        <EditText
            android:id="@+id/update_NoteTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topBarId"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textImeMultiLine"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="normal" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/update_NoteTitleId">

            <TextView
                android:id="@+id/Update_NoteNotesId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/write_note"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </ScrollView>





    </RelativeLayout>


</LinearLayout>